$Id: History,v 1.16 2002-02-06 15:54:57 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm4 History file
                    --------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

06-02-02 mma (testem4-V04-00-00)
     
10-12-01  mma
- PrimaryGenerator: uniform distribution in solid angle

28-11-01  mma (testem4-V03-02-02) 
- EventAction: DrawTrack "none"
- small change in vis.mac
- suppression of the rndm commands, now managed by G4RunManager: 
  --> RunAction, EventAction. suppression of RunActionMessenger

26-10-01  mma (testem4-V03-02-01) 
- init.mac renamed vis.mac
     
19-10-01 Steve O'Neale (examples-V03-02-00)
- Update reference output

17-10-01  mma (testem4-V03-02-00)
- new vis commands
- 80 columns everywhere
     
21-02-01  mma (testem4-V03-00-03)
- hbook histograms restored
- set cppflag G4NOHIST = true in gnumakefile
	       
20-02-01  mma (testem4-V03-00-02)
- verbose stepping adapted for STL
- save rndm at begin of event     
	           
07-12-00  mma (testem4-V02-00-03 & testem-noHist)
- remove hbook histograms: GNUmakefile,runAction,eventAction
				   
06-12-00  mma (testem4-V02-00-02 & testem-withHist)
- update of init.mac for new vis commands.
- G4UItcsh in the main()
	  				
25th November 2000 Steve O'Neale (tagset210)
- Update test outputs for Change in energy cut table printout 
  (cuts not calculated) 
- After 50000 events the seeds are not the same as for Aug 28th.
