@@ -1,4 +1,4 @@
-$Id: History,v 1.16 2002-02-06 15:54:57 maire Exp $
+$Id: History,v 1.17 2002-05-29 15:32:27 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,10 +14,13 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+29-05-02 mma (testem4-V04-00-01)
+-old histograming package clhep/hist replaced by AIDA 2.2/anaphe
 
 06-02-02 mma (testem4-V04-00-00)
      
-10-12-01  mma
+10-12-01 mma
 - PrimaryGenerator: uniform distribution in solid angle
 
 28-11-01  mma (testem4-V03-02-02) 
